test/parse/fail/backslashComma.em
# Ought to fail: No comma after \
# Arg: --ast
# Expect failure

\,
